--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
-    ${file.reference.jcMousePanel-1.6.9.jar}
+    ${file.reference.jcMousePanel-1.6.9.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
