--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${file.reference.jcMousePanel-1.6.9.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.40.jar}
+    ${file.reference.mysql-connector-java-5.1.40.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
