Form de Comedor

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.jcMousePanel-1.6.9.jar=C:\\Users\\drdr_\\Downloads\\jcmpv1.6.9\\jcMousePanel-1.6.9\\jcMousePanel-1.6.9.jar
 file.reference.jcMousePanel-1.6.9.jar-1=jcMousePanel-1.6.9.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=C:\\Users\\Raul\\Desktop\\mysql-connector-java-5.0.8-bin.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\drdr_\\Documents\\github\\Proyecto_POO\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
 file.reference.mysql-connector-java-5.1.40.jar=C:\\Users\\drdr_\\Documents\\mysql-connector-java-5.1.40.jar
 includes=**
 jar.compress=false
@@ -40,7 +41,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.mysql-connector-java-5.1.40.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jcMousePanel-1.6.9.jar-1}
+    ${file.reference.jcMousePanel-1.6.9.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
